# ocient_jdbc

./: .gitignore  .gitlab-ci.yml  BUILD.bazel  WORKSPACE  deploy.py  pom.xml  spotbugs-exclude.xml  xgjdbc-deploy.dockerfile
.github/workflows/: jdbc-deploy-build.yml  jdbc-deploy.yml
src/main/java-templates/: OcientJDBCVersion.java
src/main/java/com/ocient/cli/: CLI.java  ParseException.java  ParseExecption.java
src/main/java/com/ocient/cli/extract/: ExtractConfiguration.java  ExtractSyntaxParser.java  MultiThreadedResultSetExtractor.java  RecordExtractorFactory.java  ResultSetExtractor.java  S3OutputStream.java  SingleThreadedResultSetExtractor.java
src/main/java/com/ocient/cli/extract/wrappers/: Base64ByteArrayWrapper.java  ByteArrayWrapper.java  ByteArrayWrapperFactory.java  HexadecimalByteArrayWrapper.java  UTF8ByteArrayWrapper.java
src/main/java/com/ocient/jdbc/: JDBCDriver.java  KML.java  SQLStates.java  StLinestring.java  StPoint.java  StPolygon.java  XGArray.java  XGByteArrayHelper.java  XGConnection.java  XGDatabaseMetaData.java  XGPreparedStatement.java  XGRegexUtils.java  XGResultSet.java  XGResultSetMetaData.java  XGStatement.java  XGTime.java  XGTimestamp.java
src/main/java/org/openjump/core/ui/plugin/datastore/ocient/: OcientDSConnection.java  OcientDSMetadata.java  OcientDataStoreDriver.java  OcientDatastorePlugIn.java  OcientDatastorePlugInExtension.java  OcientFeatureInputStream.java  OcientResultSetConverter.java  OcientSQLBuilder.java  OcientValueConverterFactory.java
src/main/proto/: ClientWireProtocol.proto
src/test/java/com/ocient/cli/extract/: CliTest.java  ExtractConfigurationTest.java  ExtractSyntaxParserTest.java  RecordExtractorFactoryTest.java  S3OutputStreamTest.java
userdoc/: release_notes.adoc
